--- a/theater/pom.xml
+++ b/theater/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>auth</artifactId>
+    <artifactId>theater</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
